--- a/ori/theme/ori_app/src/index.sass
+++ b/ori/theme/ori_app/src/index.sass
@@ -1,11 +1,11 @@
 @import "~susy/sass/_susy.scss" 
 @import './lib/sass/normalize.scss'
+// @import './lib/sass/driver.scss'
 @import './styles/conf/_sizes.sass'
 @import "./styles/conf/_breakpoints.sass"
 @import "./styles/conf/_grid.sass"
 @import "./styles/conf/_colors.sass"
 @import "./styles/conf/_extentions.sass"
-// @import "./styles/conf/_helpers.sass"
 @import "./styles/conf/_mixins.sass"
 @import "./styles/conf/_fonts.sass"
 @import "./styles/conf/_common.sass"
