Update common styles.

--- a/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
+++ b/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
@@ -9,7 +9,7 @@ $sm-less: max-width 1024px
 $xs-up: 769px	
 $xs-only: 480px 768px	
 $xs: max-width 768px	
-$xxs-up: min-width 480px	
+$xxs-up: 480px	
 $xxs-lg: 480px 1199px
 $xxs: max-width 480px	
 $xxs-iphone: max-width 375px	
