Fix text, make optical adjustments, and set contacts visible in the 404 page.

--- a/ori/theme/ori_app/src/styles/_main.sass
+++ b/ori/theme/ori_app/src/styles/_main.sass
@@ -3,7 +3,7 @@
 
 .blog 
 	article
-		padding: em(18) 1.5rem em(29.12)
+		padding: em(18) 1rem em(29.12) 1.5rem
 		h2 + p
 			margin-top: em(29.12)
 	p:not(:first-of-type)
