--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -118,6 +118,10 @@
 	&Bottom
 		&_47
 			padding-bottom: $s47
+		&_11
+			padding-bottom: $s11
+		&_18
+			padding-bottom: $s18
 .visible-hidden-smLess 
 	@include breakpoint($sm-less) 
 		white-space: nowrap
