Change text, remove media page, and make visual adjustment.

--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -16,6 +16,8 @@ $pink: #FA8BC4
 $darkBurgunt: #870447
 $burgund: #941857
 $validColor: #246FD4
+$green: #CFDD93
+$darkenGreen: darken($green, 30%)
 
 $nightBlack: #3f3c39
 $hover-link: $burgund
@@ -32,3 +34,4 @@ $focusBorderGradient: linear-gradient(to right, $pink 0%, $burgund 75%, $pink 10
 $linkUnderlineGradient: linear-gradient(to right, $pink 0%, $pink 100%)
 $darkenLinkUnderlineGradient: linear-gradient(to right, $burgund 0%, $burgund 100%)
 $linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
+$greenLinkGradient: linear-gradient(180deg, $darkenGreen 0% ,rgba(255, 255, 255, .35) 50%, $darkenGreen 100%), $darkenGreen
