--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -132,6 +132,8 @@
 		position: absolute
 .margin
 	&Left
+		&_heading
+			margin-left: -5px
 		&_29
 			margin-left: $s29
 		&_47
@@ -291,6 +293,8 @@
 	color: $white
 .pinkColor
 	color: $pink
+.greenColor
+	color: $green
 .burgundColor
 	color: $burgund
 .darkGrayColor
@@ -350,7 +354,7 @@
 	opacity: 0
 
 .unstyledList > li
-	margin-top: 0
+	// margin-top: 0
 	&:before
 		content: none
 
@@ -395,7 +399,7 @@
 
 
 .container 
-	padding: 0 1.5rem
+	padding: 0 1.5rem 0 2.5rem
 	margin-right: auto
 	margin-left: auto
 	
