--- a/ori/theme/ori_app/src/styles/conf/_common.sass
+++ b/ori/theme/ori_app/src/styles/conf/_common.sass
@@ -101,8 +101,11 @@ a
     background-size: 1px 1px
   &.lightenHover
     &:hover, &:focus, &:active 
-      color: $pink
-      background-image: linear-gradient(to right, $pink 0%, $pink 100%)
+      $darkenGreen: darken($green, 30%)
+      color: $darkenGreen
+      background-image: linear-gradient(to right, $darkenGreen 0%, $darkenGreen 100%)
+      // color: $pink
+      // background-image: linear-gradient(to right, $pink 0%, $pink 100%)
     // $$darkGray: darken($darkGray, 25%)
   &.darkenLink
     color: $burgund
