--- a/ori/theme/ori_app/src/index.sass
+++ b/ori/theme/ori_app/src/index.sass
@@ -2,6 +2,7 @@
 @import './lib/sass/normalize.scss'
 // @import './lib/sass/driver.scss'
 @import './styles/conf/_sizes.sass'
+@import './styles/conf/_animations.sass'
 @import "./styles/conf/_breakpoints.sass"
 @import "./styles/conf/_grid.sass"
 @import "./styles/conf/_colors.sass"
