--- a/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
+++ b/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
@@ -1,15 +1,16 @@
 @import "~breakpoint-sass/stylesheets/_breakpoint.scss"
-$lg: 1200px	
-$md-up: 1024px	
-$md: 1024px 1199px	
-$md-less: max-width 1199px	
-$sm-up: 769px	
-$sm: 769px 1024px	
-$sm-less: max-width 1024px	
-$xs-up: 769px	
-$xs-only: 480px 768px	
-$xs: max-width 768px	
-$xxs-up: 480px	
-$xxs-lg: 480px 1199px
-$xxs: max-width 480px	
-$xxs-iphone: max-width 375px	
+@import './_helpers.sass'
+$lg: em(1200, 16)	
+$md-up: em(1024, 16)
+$md: em(1024, 16)	 em(1199, 16)		
+$md-less: max-width em(1199, 16)	
+$sm-up: em(769, 16)	
+$sm: em(769, 16) em(1024, 16)	
+$sm-less: max-width em(1024, 16)	
+$xs-up: em(769, 16)	
+$xs-only: em(580, 16) em(768, 16)	
+$xs: max-width em(768, 16)	
+$xxs-up: em(580, 16)	
+$xxs-lg: em(580, 16) em(1199, 16)
+$xxs: max-width em(580, 16)	
+$xxs-iphone: max-width em(375, 16)	
