--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -35,3 +35,4 @@ $linkUnderlineGradient: linear-gradient(to right, $pink 0%, $pink 100%)
 $darkenLinkUnderlineGradient: linear-gradient(to right, $burgund 0%, $burgund 100%)
 $linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
 $greenLinkGradient: linear-gradient(180deg, $darkenGreen 0% ,rgba(255, 255, 255, .35) 50%, $darkenGreen 100%), $darkenGreen
+$burgundLinkGradient: linear-gradient(180deg, $burgund 0% ,rgba(255, 255, 255, .35) 50%, $burgund 100%), $burgund
