--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -131,6 +131,9 @@
 		height: 1px
 		position: absolute
 .margin
+	&Centered
+		margin-left: auto
+		margin-right: auto
 	&Left
 		&_heading
 			margin-left: -5px
@@ -295,6 +298,8 @@
 	color: $pink
 .greenColor
 	color: $green
+.darkenGreenColor
+	color: $darkenGreen
 .burgundColor
 	color: $burgund
 .darkGrayColor
@@ -312,7 +317,9 @@
 		position: absolute
 	  
 
-	
+.min-width_240
+	min-width: 240px $i
+
 .whiteTextShadow
 	text-shadow: -2px 1px 13px rgba(255, 255, 255, .8)
 .textShadow
@@ -399,9 +406,14 @@
 
 
 .container 
-	padding: 0 1.5rem 0 2.5rem
+	padding-right: 1.5rem 
+	padding-left: 2.5rem
 	margin-right: auto
 	margin-left: auto
+
+	@include breakpoint($xxs)
+		padding-right: 1rem 
+		padding-left: 1.5rem
 	
 
 
@@ -438,27 +450,66 @@ input[type=number]:hover::-webkit-inner-spin-button
 
 .slowFade
 	&-enter-active, &-appear-active, &-leave-active 
-		transition: opacity 1.5s ease-in		
+		transition: opacity .4s
 		will-change: opacity
-	&-enter, &-leave-to, &-appear-to
-		opacity: 0
-	&-enter-active, &-leave-active 
-		transition: opacity 1.5s ease-in-out
-		will-change: opacity
-	&-enter, &-leave-to
-		opacity: 0
-.fade
-	&-appear-active, &-leave-active, &-enter-active
-		transition: opacity .5s ease-in-out
-		will-change: opacity
+		
 	&-enter, &-leave-to, &-appear-to
 		opacity: 0
 
 	&-enter-active, &-leave-active 
-		transition: opacity .5s ease-in-out
-  		will-change: opacity
+		transition: opacity .4s
+		will-change: opacity
+
+	&-enter-active
+		transition-timing-function: $decelleration
+
+	&-leave-active 
+		transition-timing-function: $acceleration
+
 	&-enter, &-leave-to
 		opacity: 0
+
+.fade
+	&-appear-active, &-leave-active, &-enter-active
+		transition: opacity .2s
+		will-change: opacity
+
+	&-enter, &-leave-to, &-appear-to
+		opacity: 0
+
+	// &-enter-active, &-leave-active 
+	// 	transition: opacity .2s
+ //  		will-change: opacity
+
+	&-enter-active
+		transition-timing-function: $decelleration
+
+	&-leave-active 
+		transition-timing-function: $acceleration
+
+	// &-enter, &-leave-to
+	// 	opacity: 0
+
+.fadeIn
+
+	&-appear-active, &-enter-active
+		transition: opacity .2s
+		will-change: opacity
+		transition-timing-function: $decelleration
+
+	&-enter, &-appear-to
+		opacity: 0
+		will-change: opacity
+
+	&-leave-active 
+		transition-timing-function: $acceleration
+
+	&-enter
+		opacity: 0
+
+	&-leave-to, &-leave-active
+		display: none
+
 .topMargin
 	&_29
 		margin-top: $s29 $i
@@ -466,6 +517,7 @@ input[type=number]:hover::-webkit-inner-spin-button
 		margin-top: $s18 $i
 	&_11
 		margin-top: $s11 $i
+
 .zeroTopMargin
 	margin-top: 0 $i
 
@@ -483,26 +535,42 @@ input[type=number]:hover::-webkit-inner-spin-button
 		transform: translateY(1.5rem)
 
 	&-enter-active, &-leave-active 
-		transition: opacity .2s ease-in, transform .2s ease-in-out 
+		transition: opacity .2s, transform .2s
 		transform: translateY(0)
-  		will-change: opacity, transform
+		will-change: opacity, transform
+
+	&-enter-active
+		transition-timing-function: $decelleration
+
+	&-leave-active 
+		transition-timing-function: $acceleration
 
 	&-enter, &-leave-to
 		transform: translateY(1.5rem)
 		opacity: 0
+
 .fadeTranslateFromTop
+
 	&-enter, &-leave-to
 		opacity: 0
 		transform: translateY(-1.5rem)
 
 	&-enter-active, &-leave-active 
-		transition: opacity .2s ease-in, transform .2s ease-in-out 
+		transition: opacity .2s, transform .2s
 		transform: translateY(0)
   		will-change: opacity, transform
 
 	&-enter, &-leave-to
 		transform: translateY(-1.5rem)
 		opacity: 0
+
+	&-enter-active
+		transition-timing-function: $decelleration
+
+	&-leave-active 
+		transition-timing-function: $acceleration
+
+
 
 .fading
 	&-appear
@@ -550,6 +618,22 @@ input[type=number]:hover::-webkit-inner-spin-button
 a.disableUnderline
 	background-image: none
 
+.display
+	// &_block
+	// 	display: block
+	// &_inline-block
+	// 	display: inline-block
+	// &_contains
+	// 	display: contains
+	&_none
+		display: none
+		&-phone
+			@include breakpoint($xxs)
+				display: none
+
+	&_grid
+		display: grid
+	
 .disableLinkHover
 	&:hover, &:focus, &:active
 		background-image: none $i
@@ -562,3 +646,8 @@ a.disableUnderline
 .overflowHidden
 	overflow: hidden
 	overflow-y: hidden
+
+.controller__input_datepicker
+	left: 0
+	min-width: 100%
+	transform: translateY($s29)
