Fix grid in media and shares, prevent repeated registration, and add catalog to the top of the Main page.

--- a/ori/theme/ori_app/src/styles/conf/_helpers.sass
+++ b/ori/theme/ori_app/src/styles/conf/_helpers.sass
@@ -2,6 +2,9 @@
 @function em($goal, $context: 18) 
   @return ($goal / $context) * 1em
 
+@function rem($goal, $context: 18) 
+  @return ($goal / $context) * 1rem
+
 @function adaptive($width, $height) 
   @return ($height / $width) * 100%
 
