--- a/ori/theme/ori_app/src/styles/_main.sass
+++ b/ori/theme/ori_app/src/styles/_main.sass
@@ -12,7 +12,8 @@
 .content
 	max-width: 800px
 	margin: 0 auto 0
-	font-size: $s25
+	margin-top: 3rem
+	// font-size: $s25
 	line-height: 1.5
 	@include breakpoint($xs)
 		// font-size: $s25
