--- a/ori/theme/ori_app/src/styles/conf/_common.sass
+++ b/ori/theme/ori_app/src/styles/conf/_common.sass
@@ -110,6 +110,10 @@ a
   &.darkenLink
     color: $burgund
     background-image: linear-gradient(to right, $burgund 0%, $burgund 100%)    
+
+  // &.darkGreenHover 
+  //   color: $burgund
+  //   background-image: linear-gradient(to right, $darkenGreen 0%, $darkenGreen 100%)    
   &.darkenHover   
     &:hover, &:focus, &:active 
       color: $burgund
