Register components and make ladder story.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -1,10 +1,14 @@
 @import '../styles/conf/_sizes.sass'
+
 .simpleWrapper
-	// max-width: 800px
+	max-width: 800px
 	min-height: $s144 * 2.5
-	// margin: 0 auto
+	padding: $s77 0 $s233
+	margin: 0 auto
 	
 .paddingTop
 	&_144
 		padding-top: $s144
 
+.ladderFold__title.ladderFold__title
+	top: .6em
