Make stories for awesome links.

--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -348,6 +348,9 @@
 .background-color
 	&_pink
 		background-color: $pink
+	&_darkGray
+		background-color: $darkGray
+		
 .visible-hidden-xs 
 	@include breakpoint($xs) 
 		white-space: nowrap
