Make story about SimpleLitter.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -11,6 +11,13 @@
 	&_144
 		padding-top: $s144
 
+	&_233
+		padding-top: $s233
+
+	&_big
+		padding-top: 15em
+
+
 .ladderFold__title.ladderFold__title
 	top: .6em
 
