--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -172,6 +172,9 @@
 			@include breakpoint($xs)
 				margin-left: $s18
 	&Right
+		&_6
+			margin-right: $s6
+
 		&_11
 			margin-right: $s11
 
@@ -371,18 +374,6 @@
 
 .cascadeShadow
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4)
-// .imageContainer 
-// 	height: 100%
-// 		/* style */
-// 	&, &__image 
-// 		transition: .3s ease-in-out
-// 		width: span(12)
-	
-// 	&__image 
-// 		background-position: center 
-// 		background-repeat: no-repeat
-// 		background-size: cover
-	
 
 	
 .restrictBlock 
