Make stories for ProgrammItem component.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -12,6 +12,9 @@
 	margin: 0 auto
 	
 .paddingTop
+	&_77
+		padding-top: $s77
+
 	&_144
 		padding-top: $s144
 
@@ -21,6 +24,15 @@
 	&_big
 		padding-top: 15em
 
+.paddingBottom
+	&_144
+		padding-bottom: $s144
+
+	&_233
+		padding-bottom: $s233
+
+	&_big
+		padding-bottom: 15em
 
 .ladderFold__title.ladderFold__title
 	top: .6em
