Make InfoConsultant stories.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -47,3 +47,9 @@
 
 .progressive-image
 	overflow: visible
+
+.width
+	&_425.width_425
+		min-width: 425px
+	&_500.width_500.width_500
+		width: 500px
