Make the story for UserNotification.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -23,6 +23,12 @@
 
 	&_big
 		padding-top: 15em
+	
+.userNotificationHint
+		top: calc(100% + #{$s11})
+		height: max-content
+		left: 100%
+		transform: translateX(-60%)
 
 .paddingBottom
 	&_144
