Make stories for SlideToLink.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -10,7 +10,11 @@
 	min-height: $s144 * 2.5
 	padding: $s77 1.25rem $s233 1.5rem
 	margin: 0 auto
-	
+
+.marginTop
+	&_extra
+		margin-top: 50em
+		
 .paddingTop
 	&_77
 		padding-top: $s77
